--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
                 <li><a href="#work">Work</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#education">Education</a></li>
-                <li><a href="#coursework">Coursework</a></li>
-                
+                <li><a href="#coursework">Coursework</a></li>                
             </ul>
         </div>
         <h1 id="head">
@@ -49,14 +48,22 @@
                         <a href="https://www.med.unc.edu/genetics/berglab/" class="employer" target="new">UNC Department of Genetics Berg Lab</a>
                         <p class="print-url">https://www.med.unc.edu/genetics/berglab/</p>
                         <div>
-                            <span class="job-title">Senior Developer</span>
-                            <span class="date-range">2/20 - Present</span>
+                            <h3 class="job-title">Senior Developer</h3>
+                            <span class="date-range">February 2020 - Present</span>
                         </div>
                     </dt>
                     <dd>
                         <ul>
+                            <li class="achievement">
+                                Reduced hosting costs by 75% by migrating to a cloud-native hosting platform
+                            </li>
+                            <li class="achievement">
+                                Reduced user task load by 30% through user-centered feature design
+                            </li>
+                        </ul>
+                        <ul>
                             <li>Development of custom web applications using PHP, Javascript, HTML, and CSS</li>
-                            <li>DevOps with RedHat Openshift</li>
+                            <li>DevOps with RedHat OpenShift</li>
                             <li>Creation and integration of new technologies</li>
                             <li>Software project management</li>
                             <li>Requirements gathering</li>
@@ -69,11 +76,15 @@
                         <a href="https://www.shepscenter.unc.edu/" class="employer" target="new">UNC Sheps Center For Health Services Research</a>
                         <p class="print-url">http://www.shepscenter.unc.edu</p>
                         <div>
-                            <span class="job-title">Lead Developer</span>
+                            <h3 class="job-title">Lead Developer</span>
                             <span class="date-range">12/13 - 1/20</span>
                         </div>
                     </dt>
                     <dd>
+                        <ul>
+                            <li class="achievement">Reduced developer onboarding time by 50% by migrating to industry standard MVC Framework</li>
+                            <li class="achievement">Reduced defect rate across projects by 25% by introducing automated testing</li>
+                        </ul>
                         <ul>
                             <li>Set development strategy and standards for a team of 5 developers</li>
                             <li>Modernize team's development practices and standards</li>
@@ -89,7 +100,7 @@
                         <a href="http://www.newfangled.com" class="employer" target="new">Newfangled</a>
                         <p class="print-url">http://www.newfangled.com</p>
                         <div>
-                            <span class="job-title">Developer</span>
+                            <h3 class="job-title">Developer</span>
                             <span class="date-range">02/13 - 11/13</span>
                         </div>
                     </dt>
@@ -106,7 +117,7 @@
                         <a href="http://www.lib.unc.edu" class="employer" target="new">UNC Libraries</a>
                         <p class="print-url">http://www.lib.unc.edu</p>
                         <div>
-                            <span class="job-title">Applications Analyst</span>
+                            <h3 class="job-title">Applications Analyst</span>
                             <span class="date-range">03/11 - 12/12</span>
                         </div>
                     </dt>
@@ -125,7 +136,7 @@
                         <a href="http://www.viget.com" class="employer" target="new">Viget Labs</a>
                         <p class="print-url">http://www.viget.com</p>
                         <div>
-                            <span class="job-title">User Experience Designer</span>
+                            <h3 class="job-title">User Experience Designer</span>
                             <span class="date-range">12/09 - 12/10</span>
                         </div>
                     </dt>
@@ -142,7 +153,7 @@
                         <a href="http://www.lulu.com" class="employer" target="new">Lulu.com</a>
                         <p class="print-url">http://www.lulu.com</p>
                         <div>
-                            <span class="job-title">User Experience Designer and Developer</span>
+                            <h3 class="job-title">User Experience Designer and Developer</span>
                             <span class="date-range">06/06 - 12/09</span>
                         </div>
                     </dt>
@@ -161,7 +172,7 @@
                         <a href="http://www.ibiblio.org" class="employer" target="new">Ibiblio.org</a>
                         <p class="print-url">http://www.ibiblio.org</p>
                         <div>
-                            <span class="job-title">Applications Designer and Developer</span>
+                            <h3 class="job-title">Applications Designer and Developer</span>
                             <span class="date-range">08/04 - 08/06</span>
                         </div>
                     </dt>
@@ -177,7 +188,7 @@
                         <a href="http://www.lib.unc.edu" class="employer" target="new">UNC Libraries</a>
                         <p class="print-url">http://www.lib.unc.edu</p>
                         <div>
-                            <span class="job-title">Web Developer</span>
+                            <h3 class="job-title">Web Developer</span>
                             <span class="date-range">09/02 - 08/04</span>
                         </div>
                     </dt>
@@ -194,7 +205,7 @@
                         <a href="http://www.lib.unc.edu" class="employer" target="new">UNC Libraries - Media Resources Center</a>
                         <p class="print-url">http://www.lib.unc.edu</p>
                         <div>
-                            <span class="job-title">Library Assistant</span>
+                            <h3 class="job-title">Library Assistant</span>
                             <span class="date-range">12/00 - 09/02</span>
                         </div>
                     </dt>
@@ -227,7 +238,7 @@
                         <p class="print-url">https://github.com/clingen-data-model/clingen-gene-tracker</p>
                     </div>
                     <div class="activities">
-                        A Laravel/Vue.js based application to help biocurators working for the NIH funded Clinical Genome Project track their work and avoid duplication of effort.
+                        A Laravel/Vue.js based application to help bio-curators working for the NIH funded Clinical Genome Project track their work and avoid duplication of effort.
                     </div>
                 </li>
                 <li class="item berglab">
@@ -236,7 +247,7 @@
                         <p class="print-url">https://github.com/clingen-data-model/community-curation</p>
                     </div>
                     <div class="activities">
-                        A system to onboard and track assignment, training, and attestations of volunteer biocurators for the NIH funded Clinical Genome Project. 
+                        A system to onboard and track assignment, training, and attestations of volunteer bio-curators for the NIH funded Clinical Genome Project. 
                     </div>
                 </li>
                 <li class="item sheps">
@@ -275,7 +286,7 @@
                 <li class="technical berg">FastAPI</li>
                 <li class="technical sheps">Vue.js</li>
                 <li class="technical sheps berg">Docker</li>
-                <li class="technical sheps berg">Openshift/Kubernetes</li>
+                <li class="technical sheps berg">OpenShift/Kubernetes</li>
                 <li class="technical sheps">Git</li>
                 <li class="technical sheps">Mercurial</li>
                 <li class="technical sheps">Vagrant</li>
