Use achievement-centered as index.

--- a/traditional.html
+++ b/traditional.html
@@ -53,22 +53,21 @@
                         </div>
                     </dt>
                     <dd>
-                        <p>
-                            Research, design, and build custom business solutions for an NIH funded consortium using web-standards, PHP, Python, Kubernetes, Apache Kafka, and other technologies.
-                        </p>
                         <ul>
                             <li class="achievement">
-                                Reduced hosting costs by nearly 75% by migrating to an organization-hosted RedHat OpenShift.
+                                Reduced hosting costs by 75% by migrating to a cloud-native hosting platform
                             </li>
                             <li class="achievement">
-                                Reduced user task load by 30% through user-centered feature design and task automation
+                                Reduced user task load by 30% through user-centered feature design
                             </li>
-                            <li class="achievement">
-                                Automation of data synchronization between applications with web APIs and Apache Kafka
-                            </li>
-                            <li class="achievement">
-                                Improved stakeholder relations by increasing transparency into the development process
-                            </li>
+                        </ul>
+                        <ul>
+                            <li>Development of custom web applications using PHP, Javascript, HTML, and CSS</li>
+                            <li>DevOps with RedHat OpenShift</li>
+                            <li>Creation and integration of new technologies</li>
+                            <li>Software project management</li>
+                            <li>Requirements gathering</li>
+                            <li>Feature and workflow design</li>
                         </ul>
                     </dd>
                 </div>
@@ -82,22 +81,17 @@
                         </div>
                     </dt>
                     <dd>
-                        <p>
-                            Modernized a team of 5 developers servicing health services researchers by setting code standards, establishing development conventions, and adopting community best practices.
-                        </p>
                         <ul>
-                            <li class="achievement">
-                                Increased team flexibility and velocity by modernizing team's development practices and standards
-                            </li>
-                            <li class="achievement">
-                                Reduced developer onboarding time by 50% by migrating to leading a MVC Framework
-                            </li>
-                            <li class="achievement">
-                                Reduced defect rate across projects by 23% by introducing automated testing
-                            </li>
-                            <li class="achievement">
-                                Improved client relations by introduction of agile methodology and user-centered design practices
-                            </li>
+                            <li class="achievement">Reduced developer onboarding time by 50% by migrating to industry standard MVC Framework</li>
+                            <li class="achievement">Reduced defect rate across projects by 25% by introducing automated testing</li>
+                        </ul>
+                        <ul>
+                            <li>Set development strategy and standards for a team of 5 developers</li>
+                            <li>Modernize team's development practices and standards</li>
+                            <li>Transition team from a homegrown framework to Laravel and Vue.js</li>
+                            <li>Development of custom web applications using PHP, Javascript, HTML, and CSS</li>
+                            <li>Requirements gathering</li>
+                            <li>Feature and workflow design</li>
                         </ul>
                     </dd>
                 </div>
@@ -111,9 +105,6 @@
                         </div>
                     </dt>
                     <dd>
-                        <p>
-                            Developed custom web sites for clients using serve-side technologies and web standards.
-                        </p>
                         <ul>
                             <li>Development of custom web sites using PHP, Javascript, HTML, and CSS</li>
                             <li>Responsive site development</li>
@@ -131,9 +122,6 @@
                         </div>
                     </dt>
                     <dd>
-                        <p>
-                            Developed digital library systems using Python, web-standards, SOLR, and other technologies.
-                        </p>
                         <ul>
                             <li>Conduct user needs analysis</li>
                             <li>Design information architecture and user interfaces</li>
@@ -153,9 +141,6 @@
                         </div>
                     </dt>
                     <dd>
-                        <p>
-                            Researched and designed user experiences for client's web-based products.
-                        </p>
                         <ul>
                             <li>Conduct user and stakeholder research to define scope, vision, and direction of projects</li>
                             <li>Create high quality deliverables to convey information architecture, interaction design, and content strategy</li>
@@ -173,9 +158,6 @@
                         </div>
                     </dt>
                     <dd>
-                        <p>
-                            Designed and developed user-facing products for a self publishing start-up.
-                        </p>
                         <ul> 
                           <li>Conduct user research to determine user needs</li> 
                           <li>Work with software engineers, graphic designers, and stakeholders to design software services and applications for Lulu.com users</li> 
@@ -195,10 +177,8 @@
                         </div>
                     </dt>
                     <dd>
-                        <p>
-                            Designed, built, and supported web applications.
-                        </p>
                         <ul> 
+                          <li>Design and implementation of web applications</li> 
                           <li>Research, development, and execution of new technologies and applications including RSS, podcasting, blogging software and BitTorrent</li> 
                         </ul> 
                     </dd>
@@ -213,12 +193,8 @@
                         </div>
                     </dt>
                     <dd>
-                        <p>
-                            Designed, developed, and supported web-based applications for library staff and patrons using PHP, MySQL, PERL, JavaScript, XML, and HTML.
-                        </p>
                         <ul> 
-                          <li>Research and design information retrieval applications for library staff and patrons</li>
-                          <li>Development and support of applications using PHP, MySQL, PERL, JavaScript, XML, and HTML</li> 
+                          <li>Design, development and support of internet applications for library staff and patrons using PHP, MySQL, PERL, JavaScript, XML, and HTML</li> 
                           <li>Investigation and application of new technologies</li> 
                           <li>Beginning HTML, CSS, and PHP instruction for library staff</li> 
                         </ul> 
@@ -234,9 +210,6 @@
                         </div>
                     </dt>
                     <dd>
-                        <p>
-                            Developed a web accessible database application to help library patrons browse UNC Library's non-print collection.
-                        </p>
                         <ul> 
                           <li>Development and support of web database applications for the Media Resources Center.
                           </li> 
