Updates to resume and gitignore.

--- a/achievement-centered.html
+++ b/achievement-centered.html
@@ -34,7 +34,7 @@
         <section id="summary" class="summary">
             <h2>Summary</h2>
             <ul>
-                <li>Full stack developer with 20 years of experience building web-based applications</li>
+                <li>Full stack developer with over 20 years of experience designing and building web-based applications</li>
                 <li>Fluent in modern development practices</li>
                 <li>Passionate about building usable, performant, and maintainable software</li>
                 <li>Independent self-starter who likes working with other passionate people</li>
@@ -58,7 +58,7 @@
                         </p>
                         <ul>
                             <li class="achievement">
-                                Reduced hosting costs by nearly 75% by migrating to an organization-hosted RedHat OpenShift.
+                                Reduced hosting costs by nearly 75% by migrating to UNC hosted RedHat OpenShift.
                             </li>
                             <li class="achievement">
                                 Reduced user task load by 30% through user-centered feature design and task automation
@@ -74,10 +74,10 @@
                 </div>
                 <div class="item sheps">
                     <dt>
-                        <a href="https://www.shepscenter.unc.edu/" class="employer" target="new">UNC Sheps Center For Health Services Research</a>
+                        <a href="https://www.shepscenter.unc.edu/" class="employer" target="new">UNC Sheps Center for Health Services Research</a>
                         <p class="print-url">http://www.shepscenter.unc.edu</p>
                         <div>
-                            <h3 class="job-title">Lead Developer</span>
+                            <h3 class="job-title">Lead Developer</h3>
                             <span class="date-range">12/13 - 1/20</span>
                         </div>
                     </dt>
@@ -90,13 +90,13 @@
                                 Increased team flexibility and velocity by modernizing team's development practices and standards
                             </li>
                             <li class="achievement">
-                                Reduced developer onboarding time by 50% by migrating to leading a MVC Framework
+                                Reduced developer onboarding time by 50% by migrating to a leading MVC Framework
                             </li>
                             <li class="achievement">
                                 Reduced defect rate across projects by 23% by introducing automated testing
                             </li>
                             <li class="achievement">
-                                Improved client relations by introduction of agile methodology and user-centered design practices
+                                Improved client relations by introducing agile and user-centered design practices
                             </li>
                         </ul>
                     </dd>
@@ -106,16 +106,16 @@
                         <a href="http://www.newfangled.com" class="employer" target="new">Newfangled</a>
                         <p class="print-url">http://www.newfangled.com</p>
                         <div>
-                            <h3 class="job-title">Developer</span>
+                            <h3 class="job-title">Developer</h3>
                             <span class="date-range">02/13 - 11/13</span>
                         </div>
                     </dt>
                     <dd>
                         <p>
-                            Developed custom web sites for clients using serve-side technologies and web standards.
+                            Developed custom web sites for clients using server-side technologies and web standards.
                         </p>
                         <ul>
-                            <li>Development of custom web sites using PHP, Javascript, HTML, and CSS</li>
+                            <li>Development of custom web sites using PHP, MySQL, JavaScript, HTML, and CSS</li>
                             <li>Responsive site development</li>
                             <li>Maintenance and improvement of client sites</li>
                         </ul>
@@ -126,20 +126,18 @@
                         <a href="http://www.lib.unc.edu" class="employer" target="new">UNC Libraries</a>
                         <p class="print-url">http://www.lib.unc.edu</p>
                         <div>
-                            <h3 class="job-title">Applications Analyst</span>
+                            <h3 class="job-title">Applications Analyst</h3>
                             <span class="date-range">03/11 - 12/12</span>
                         </div>
                     </dt>
                     <dd>
                         <p>
-                            Developed digital library systems using Python, web-standards, SOLR, and other technologies.
+                            Developed digital library systems using Python, web-standards, Apache Solr, and other technologies.
                         </p>
                         <ul>
-                            <li>Conduct user needs analysis</li>
                             <li>Design information architecture and user interfaces</li>
-                            <li>Develop new features for an existing Django application</li>
-                            <li>Design a Solr index and integrate it with Django and PHP applications</li>
-                            <li>Development of custom PHP</li>
+                            <li>Custom application development using PHP and Python</li>
+                            <li>Design of a Solr index and integration with Django and PHP applications</li>
                         </ul>
                     </dd>
                 </div>
@@ -148,7 +146,7 @@
                         <a href="http://www.viget.com" class="employer" target="new">Viget Labs</a>
                         <p class="print-url">http://www.viget.com</p>
                         <div>
-                            <h3 class="job-title">User Experience Designer</span>
+                            <h3 class="job-title">User Experience Designer</h3>
                             <span class="date-range">12/09 - 12/10</span>
                         </div>
                     </dt>
@@ -168,20 +166,20 @@
                         <a href="http://www.lulu.com" class="employer" target="new">Lulu.com</a>
                         <p class="print-url">http://www.lulu.com</p>
                         <div>
-                            <h3 class="job-title">User Experience Designer and Developer</span>
+                            <h3 class="job-title">User Experience Designer and Developer</h3>
                             <span class="date-range">06/06 - 12/09</span>
                         </div>
                     </dt>
                     <dd>
                         <p>
-                            Designed and developed user-facing products for a self publishing start-up.
+                            Designed and developed user-facing products for a self-publishing start-up.
                         </p>
                         <ul> 
                           <li>Conduct user research to determine user needs</li> 
                           <li>Work with software engineers, graphic designers, and stakeholders to design software services and applications for Lulu.com users</li> 
                           <li>Conduct user testing to assess usability and user perceptions</li> 
                           <li>Monitor analytics data to evaluate efficacy of iterative design changes</li> 
-                          <li>Implement design for web browsers using XHTML, CSS, Javascript, and Adobe Flex</li> 
+                          <li>Implement design for web browsers using XHTML, CSS, JavaScript, and Adobe Flex</li> 
                         </ul> 
                     </dd>
                 </div>
@@ -190,7 +188,7 @@
                         <a href="http://www.ibiblio.org" class="employer" target="new">Ibiblio.org</a>
                         <p class="print-url">http://www.ibiblio.org</p>
                         <div>
-                            <h3 class="job-title">Applications Designer and Developer</span>
+                            <h3 class="job-title">Applications Designer and Developer</h3>
                             <span class="date-range">08/04 - 08/06</span>
                         </div>
                     </dt>
@@ -220,7 +218,6 @@
                           <li>Research and design information retrieval applications for library staff and patrons</li>
                           <li>Development and support of applications using PHP, MySQL, PERL, JavaScript, XML, and HTML</li> 
                           <li>Investigation and application of new technologies</li> 
-                          <li>Beginning HTML, CSS, and PHP instruction for library staff</li> 
                         </ul> 
                     </dd>
                 </div>
@@ -229,13 +226,13 @@
                         <a href="http://www.lib.unc.edu" class="employer" target="new">UNC Libraries - Media Resources Center</a>
                         <p class="print-url">http://www.lib.unc.edu</p>
                         <div>
-                            <h3 class="job-title">Library Assistant</span>
+                            <h3 class="job-title">Library Assistant</h3>
                             <span class="date-range">12/00 - 09/02</span>
                         </div>
                     </dt>
                     <dd>
                         <p>
-                            Developed a web accessible database application to help library patrons browse UNC Library's non-print collection.
+                            Developed a web accessible database-driven application to help library patrons browse UNC Library's non-print collection.
                         </p>
                         <ul> 
                           <li>Development and support of web database applications for the Media Resources Center.
@@ -286,7 +283,7 @@
                         A Laravel package to facilitate the development of surveys with flexible workflows.
                     </p>
                 </li>
-                <li class="item sheps">
+                <!-- <li class="item sheps">
                     <div class="project-title">
                         <a href="https://bitbucket.org/shepsweb/sirs-surveys" target="new">sirs\tasks</a>
                         <p class="print-url">https://bitbucket.org/shepsweb/sirs-tasks</p>
@@ -294,7 +291,7 @@
                     <p class="activities">                    
                         A Laravel package to facilitate development of task tracking systems in Laravel.
                     </p>
-                </li>
+                </li> -->
             </ul>
         </section>
         <section id="skills">
@@ -302,7 +299,7 @@
             <ul class="skills inline separator-comma">
                 <li class="technical lulu ibiblio unclib-systems newfangled sheps berg">PHP</li>
                 <li class="technical unclib-systems sheps berg">Python</li>
-                <li class="technical viget lulu unclib-systems newfangled sheps berg">Javascript</li>
+                <li class="technical viget lulu unclib-systems newfangled sheps berg">JavaScript</li>
                 <li class="technical viget lulu ibiblio unclib-systems newfangled sheps berg">HTML 5</li>
                 <li class="technical viget lulu ibiblio unclib-systems newfangled sheps berg">CSS</li>
                 <li class="technical ibiblio unclib-systems newfangled sheps berg">MySQL</li>
@@ -344,7 +341,7 @@
                 </div>
             </dl>
         </section>
-        <section id="coursework">
+        <!-- <section id="coursework">
             <h2>Coursework</h2>
             <ul class="coursework inline separator-comma">
                 <li class="msis">Human-Computer Interaction</li>
@@ -354,7 +351,7 @@
                 <li class="cs">Programming for the World Wide Web</li>
                 <li class="msis">Web Database Applications</li>
             </ul>
-        </section>
+        </section> -->
     </div>
 </body>
 </html>
