--- a/traditional.html
+++ b/traditional.html
@@ -62,7 +62,7 @@
                             </li>
                         </ul>
                         <ul>
-                            <li>Development of custom web applications using PHP, Javascript, HTML, and CSS</li>
+                            <li>Development of custom web applications using PHP, JavaScript, HTML, and CSS</li>
                             <li>DevOps with RedHat OpenShift</li>
                             <li>Creation and integration of new technologies</li>
                             <li>Software project management</li>
@@ -89,7 +89,7 @@
                             <li>Set development strategy and standards for a team of 5 developers</li>
                             <li>Modernize team's development practices and standards</li>
                             <li>Transition team from a homegrown framework to Laravel and Vue.js</li>
-                            <li>Development of custom web applications using PHP, Javascript, HTML, and CSS</li>
+                            <li>Development of custom web applications using PHP, JavaScript, HTML, and CSS</li>
                             <li>Requirements gathering</li>
                             <li>Feature and workflow design</li>
                         </ul>
@@ -106,7 +106,7 @@
                     </dt>
                     <dd>
                         <ul>
-                            <li>Development of custom web sites using PHP, Javascript, HTML, and CSS</li>
+                            <li>Development of custom web sites using PHP, JavaScript, HTML, and CSS</li>
                             <li>Responsive site development</li>
                             <li>Maintenance and improvement of client sites</li>
                         </ul>
@@ -163,7 +163,7 @@
                           <li>Work with software engineers, graphic designers, and stakeholders to design software services and applications for Lulu.com users</li> 
                           <li>Conduct user testing to assess usability and user perceptions</li> 
                           <li>Monitor analytics data to evaluate efficacy of iterative design changes</li> 
-                          <li>Implement design for web browsers using XHTML, CSS, Javascript, and Adobe Flex</li> 
+                          <li>Implement design for web browsers using XHTML, CSS, JavaScript, and Adobe Flex</li> 
                         </ul> 
                     </dd>
                 </div>
@@ -275,7 +275,7 @@
             <ul class="skills inline separator-comma">
                 <li class="technical lulu ibiblio unclib-systems newfangled sheps berg">PHP</li>
                 <li class="technical unclib-systems sheps berg">Python</li>
-                <li class="technical viget lulu unclib-systems newfangled sheps berg">Javascript</li>
+                <li class="technical viget lulu unclib-systems newfangled sheps berg">JavaScript</li>
                 <li class="technical viget lulu ibiblio unclib-systems newfangled sheps berg">HTML 5</li>
                 <li class="technical viget lulu ibiblio unclib-systems newfangled sheps berg">CSS</li>
                 <li class="technical ibiblio unclib-systems newfangled sheps berg">MySQL</li>
